# Bulicoso

./: .env  .gitignore  LLM_exemple.ipynb  Prova de Conceito (POC) — Recuperação de Informações em Bulas de Medicamentos com LangChain e ChromaDB.docx  README.md  agendar_medicamento.py  google_calendar_auth.py  requirements.txt  run_batches.py  test.py  vectorize_batch.py
Backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  ingest_data.py  pyproject.toml  requirements.txt  run.py
Backend/app/: __init__.py  agendar_medicamento.py  main.py  medic_app.py  token.pickle
Backend/app/api/: __init__.py
Backend/app/batches/: batch_100_100.txt  batch_102_102.txt  batch_106_106.txt  batch_107_107.txt  batch_10_10.txt  batch_110_110.txt  batch_111_111.txt  batch_112_112.txt  batch_113_113.txt  batch_114_114.txt  batch_119_119.txt  batch_11_11.txt  batch_121_121.txt  batch_123_123.txt  batch_124_124.txt  batch_127_127.txt  batch_128_128.txt  batch_129_129.txt  batch_132_132.txt  batch_133_133.txt  batch_137_137.txt  batch_138_138.txt  batch_139_139.txt  batch_13_13.txt  batch_143_143.txt  batch_144_144.txt  batch_146_146.txt  batch_148_148.txt  batch_152_152.txt  batch_153_153.txt  batch_155_155.txt  batch_156_156.txt  batch_158_158.txt  batch_159_159.txt  batch_15_15.txt  batch_162_162.txt  batch_164_164.txt  batch_168_168.txt  batch_169_169.txt  batch_16_16.txt  (+149 more)
Backend/app/core/: config.py  dependencies.py  logger.py
Backend/app/db/: __init__.py  chroma_client.py  seed.py
Backend/app/models/: __init__.py  medication.py  reminder.py
(+210 files in other folders)
